Home page overflow fixed.

--- a/src/pages/homepage/index.css
+++ b/src/pages/homepage/index.css
@@ -1,9 +1,10 @@
 .home-container {
   background-image: url("https://images.unsplash.com/photo-1623932078824-d418b56df86a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
-  height: 100vh;
+  height: 95vh;
+  width: 100vw;
   background-repeat: no-repeat;
   background-position: center;
-  position: relative;
+  position: fixed;
   filter: grayscale(0.6) opacity(0.75);
   display: flex;
   align-items: center;
